--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1781,6 +1781,22 @@
                   <number>0</number>
                  </property>
                  <item>
+                  <spacer name="horizontalSpacer_4">
+                   <property name="orientation">
+                    <enum>Qt::Horizontal</enum>
+                   </property>
+                   <property name="sizeType">
+                    <enum>QSizePolicy::Fixed</enum>
+                   </property>
+                   <property name="sizeHint" stdset="0">
+                    <size>
+                     <width>30</width>
+                     <height>20</height>
+                    </size>
+                   </property>
+                  </spacer>
+                 </item>
+                 <item>
                   <widget class="QLabel" name="infoPreviewLabel">
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -1799,6 +1815,25 @@
                    </property>
                    <property name="alignment">
                     <set>Qt::AlignCenter</set>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="myImageryDocsButton">
+                   <property name="minimumSize">
+                    <size>
+                     <width>0</width>
+                     <height>0</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>30</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <property name="text">
+                    <string/>
                    </property>
                   </widget>
                  </item>
@@ -2290,7 +2325,27 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="2">
+             <item row="4" column="0">
+              <widget class="QLineEdit" name="filterProject">
+               <property name="maxLength">
+                <number>255</number>
+               </property>
+               <property name="placeholderText">
+                <string>Filter project by name</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="2">
+              <widget class="QRadioButton" name="viewAsLocal">
+               <property name="text">
+                <string>save results as a local vector file</string>
+               </property>
+               <attribute name="buttonGroup">
+                <string notr="true">buttonGroup</string>
+               </attribute>
+              </widget>
+             </item>
+             <item row="4" column="2">
               <widget class="QRadioButton" name="viewAsTiles">
                <property name="text">
                 <string>view results as a vector tiles</string>
@@ -2303,23 +2358,13 @@
                </attribute>
               </widget>
              </item>
-             <item row="4" column="2">
-              <widget class="QRadioButton" name="viewAsLocal">
+             <item row="3" column="2">
+              <widget class="QCheckBox" name="cornfirmProcessingStart">
                <property name="text">
-                <string>save results as a local vector file</string>
+                <string>Corfirm processing start</string>
                </property>
-               <attribute name="buttonGroup">
-                <string notr="true">buttonGroup</string>
-               </attribute>
-              </widget>
-             </item>
-             <item row="4" column="0">
-              <widget class="QLineEdit" name="filterProject">
-               <property name="maxLength">
-                <number>255</number>
-               </property>
-               <property name="placeholderText">
-                <string>Filter project by name</string>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
